--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div id="grid-container" class=" h-screen w-screen grid gap-12 overflow-x-hidden ">
+    <div id="grid-container" class=" h-screen w-screen grid gap-24 overflow-x-hidden ">
         <div id="hero" class="relative h-screen p-4">
             <div id="heading" class="flex justify-between text-white">
                 <h2 class="text-4xl">loopstudios</h2>
@@ -25,13 +25,37 @@
             </div>
             <div id="header-text" class="absolute top-1/2 left-1/2 text-white md:left-1/3 md:top-1/3">
                 <p
-                    class="relative right-1/2  border border-white border-4 p-8 md:right-1/3 text-6xl md:text-7xl md:px-12 md:py-8">
+                    class="relative right-1/2  border border-white border-4 p-8 md:right-1/3 text-6xl font-thin md:text-7xl md:px-12 md:py-8">
                     IMMERSIVE <br>
                     EXPERIENCES <br> THAT DELIVER
                 </p>
             </div>
         </div>
-        <div id="main"></div>
+        <div id="main" class="relative">
+            <img src="/images/mobile/image-interactive.jpg" alt="Guy wearing VR headset"
+                class="px-8 md:px-24 md:hidden">
+            <img src="/images/desktop/image-interactive.jpg" alt="Guy wearing VR headset"
+                class="hidden md:block md:mx-24">
+            <div id="main-desc"
+                class="flex flex-col justify-center items-center gap-8 md:absolute lg:w-1/2 md:top-1/2 md:left-1/2 md:bg-white lg:mt-12">
+                <h3 class="text-5xl sfont-thin pt-8 md:font-thin">THE LEADER IN <br> INTERACTIVE VR</h3>
+                <p
+                    class="px-8 text-center text-xl leading-loose tracking-wide font-bold text-darkGray md:font-thin md:text-sm md:mt-2">
+                    Founded in
+                    2011,
+                    loopstudios has
+                    been
+                    producing
+                    world-class virtual
+                    reality
+                    projects for
+                    some of the
+                    best companies around the globe.
+                    Our award-winning creations have transformed businesses through digital experiences that bind to
+                    their band.
+                </p>
+            </div>
+        </div>
         <div id="creations"></div>
         <div id="footer"></div>
     </div>
