Styling creation section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="grid-container" class=" h-screen w-screen grid gap-24 overflow-x-hidden ">
         <div id="hero" class="relative h-screen p-4">
             <div id="heading" class="flex justify-between text-white">
-                <h2 class="text-4xl">loopstudios</h2>
+                <img src="images/logo.svg" alt="loopstudios logo">
                 <ul id="menu" class=" hidden md:flex md:justify-evenly md:items-center md:space-x-4 ">
                     <li>About</li>
                     <li>Careers</li>
@@ -38,7 +38,7 @@
                 class="hidden md:block md:mx-24">
             <div id="main-desc"
                 class="flex flex-col justify-center items-center gap-8 md:absolute lg:w-1/2 md:top-1/2 md:left-1/2 md:bg-white lg:mt-12">
-                <h3 class="text-5xl sfont-thin pt-8 md:font-thin">THE LEADER IN <br> INTERACTIVE VR</h3>
+                <h3 class="text-5xl sfont-thin pt-8 font-thin">THE LEADER IN <br> INTERACTIVE VR</h3>
                 <p
                     class="px-8 text-center text-xl leading-loose tracking-wide font-bold text-darkGray md:font-thin md:text-sm md:mt-2">
                     Founded in
@@ -56,9 +56,102 @@
                 </p>
             </div>
         </div>
-        <div id="creations"></div>
+        <div id="creations">
+            <h3 class="text-center text-5xl font-thin pb-16">OUR CREATIONS</h3>
+            <div id="creations-grid" class="grid gap-8 mx-8 md:grid-cols-4">
+                <div class="relative">
+                    <img src="/images/mobile/image-deep-earth.jpg" alt="Earth picture" class=" md:hidden">
+                    <img src="/images/desktop/image-deep-earth.jpg" alt="Earth picture"
+                        class="hidden md:block brightness-75">
+                    <h4 class="absolute bottom-8 left-8 text-white text-3xl font-thin md:hidden">DEEP <br>EARTH</h4>
+                    <h4
+                        class="hidden md:absolute md:bottom-8 md:left-8 md:text-white md:text-3xl md:font-thin md:block">
+                        DEEP
+                        <br>EARTH
+                    </h4>
+                </div>
+                <div class="relative">
+                    <img src="images/mobile/image-night-arcade.jpg" alt="arcade" class="brightness-75 md:hidden">
+                    <img src="/images/desktop/image-night-arcade.jpg" alt="arcade"
+                        class="hidden md:block brightness-75">
+                    <h4 class="absolute bottom-8 left-8 text-white text-3xl font-thin md:hidden">NIGHT <br>ARCADE</h4>
+                    <h4
+                        class="hidden md:absolute md:bottom-8 md:left-8 md:text-white md:text-3xl md:font-thin md:block  md:brightness-75">
+                        NIGHT
+                        <br>ARCADE
+                    </h4>
+                </div>
+                <div class="relative">
+                    <img src="images/mobile/image-soccer-team.jpg" alt="Soccer player" class="brightness-90  md:hidden">
+                    <img src="/images/desktop/image-soccer-team.jpg" alt="Soccer player"
+                        class="hidden md:block brightness-75">
+                    <h4 class="absolute bottom-8 left-8 text-white text-3xl font-thin md:hidden">SOCCER <br>TEAM VR</h4>
+                    <h4
+                        class="hidden md:absolute md:bottom-8 md:left-8 md:text-white md:text-3xl md:font-thin md:block">
+                        SOCCER
+                        <br>TEAM VR
+                    </h4>
+                </div>
+                <div class="relative">
+                    <img src="images/mobile/image-grid.jpg" alt="race Car" class="brightness-75  md:hidden">
+                    <img src="/images/desktop/image-grid.jpg" alt="race car" class="hidden md:block  brightness-75">
+                    <h4 class="absolute bottom-8 left-8 text-white text-3xl font-thin md:hidden">THE <br>GRID</h4>
+                    <h4
+                        class="hidden md:absolute md:bottom-8 md:left-8 md:text-white md:text-3xl md:font-thin md:block">
+                        THE
+                        <br>GRID
+                    </h4>
+                </div>
+                <div class="relative">
+                    <img src="images/mobile/image-from-above.jpg" alt="top view" class="brightness-75  md:hidden">
+                    <img src="/images/desktop/image-from-above.jpg" alt="top view"
+                        class="hidden md:block brightness-75">
+                    <h4 class="absolute bottom-8 left-8 text-white text-3xl font-thin md:hidden">FROM UP <br>ABOVE VR
+                    </h4>
+                    <h4
+                        class="hidden md:absolute md:bottom-8 md:left-8 md:text-white md:text-3xl md:font-thin md:block">
+                        FROM UP
+                        <br>ABOVE VR
+                    </h4>
+                </div>
+                <div class="relative">
+                    <img src="images/mobile/image-pocket-borealis.jpg" alt="aurora" class="brightness-90  md:hidden">
+                    <img src="/images/desktop/image-pocket-borealis.jpg" alt="aurora"
+                        class="hidden md:block brightness-75">
+                    <h4 class="absolute bottom-8 left-8 text-white text-3xl font-thin md:hidden">POCKET <br>BOREALIS
+                    </h4>
+                    <h4
+                        class="hidden md:absolute md:bottom-8 md:left-8 md:text-white md:text-3xl md:font-thin md:block">
+                        POCKET
+                        <br>BOREALIS
+                    </h4>
+                </div>
+                <div class="relative">
+                    <img src="images/mobile/image-curiosity.jpg" alt="curiosity rover" class="brightness-75  md:hidden">
+                    <img src="/images/desktop/image-curiosity.jpg" alt="curiosity rover"
+                        class="hidden md:block brightness-75">
+                    <h4 class="absolute bottom-8 left-8 text-white text-3xl font-thin md:hidden">THE <br>CURIOSITY</h4>
+                    <h4
+                        class="hidden md:absolute md:bottom-8 md:left-8 md:text-white md:text-3xl md:font-thin md:block">
+                        CURIOSITY
+                        <br>EARTH
+                    </h4>
+                </div>
+                <div class="relative">
+                    <img src="images/mobile/image-fisheye.jpg" alt="fisheye lense" class="brightness-50  md:hidden">
+                    <img src="/images/desktop/image-fisheye.jpg" alt="fisheye lense"
+                        class="hidden md:block brightness-75">
+                    <h4 class="absolute bottom-8 left-8 text-white text-3xl font-thin md:hidden">MAKE IT <br>FISHEYE
+                    </h4>
+                    <h4
+                        class="hidden md:absolute md:bottom-8 md:left-8 md:text-white md:text-3xl md:font-thin md:block">
+                        MAKE IT
+                        <br>FISHEYE
+                    </h4>
+                </div>
+            </div>
+        </div>
         <div id="footer"></div>
-    </div>
 </body>
 
 </html>
