--- a/index.html
+++ b/index.html
@@ -56,8 +56,13 @@
                 </p>
             </div>
         </div>
-        <div id="creations">
-            <h3 class="text-center text-5xl font-thin pb-16">OUR CREATIONS</h3>
+        <div id="creations" class="md:mt-24">
+            <div class="md:flex md:justify-between md:mx-8 mb-16">
+                <h3 class="text-center text-5xl font-thin ">OUR CREATIONS</h3>
+                <button
+                    class="hidden md:block md:px-12 md:py-2 md:border md:border-black md:hover:bg-black md:hover:text-white">SEE
+                    ALL</button>
+            </div>
             <div id="creations-grid" class="grid gap-8 mx-8 md:grid-cols-4">
                 <div class="relative">
                     <img src="/images/mobile/image-deep-earth.jpg" alt="Earth picture" class=" md:hidden">
@@ -151,7 +156,27 @@
                 </div>
             </div>
         </div>
-        <div id="footer"></div>
+        <div id="footer" class="bg-black flex flex-col justify-center items-center md:justify-around md:flex-row">
+            <div id="footer-links" class="">
+                <img src="images/logo.svg" alt="loopstudios logo" class="my-8 md:my-4">
+                <ul class="text-white text-xl text-center space-y-8 md:flex md:space-y-0 md:space-x-4 md:text-sm">
+                    <li>About</li>
+                    <li>Careers</li>
+                    <li>Events</li>
+                    <li>Products</li>
+                    <li>Support</li>
+                </ul>
+            </div>
+            <div id="socials" class="w-full flex flex-col items-center justify-center md:w-1/2 md:items-end">
+                <div id="social-links" class=" flex space-x-4 my-8">
+                    <img src="images/icon-facebook.svg" alt="facebook icon">
+                    <img src="images/icon-twitter.svg" alt="twitter icon">
+                    <img src="images/icon-pinterest.svg" alt="printerest icon">
+                    <img src="images/icon-instagram.svg" alt="instagram icon">
+                </div>
+                <h4 class="text-darkGray mb-8">&copy; 2021 Loopstudios. All right reserved.</h4>
+            </div>
+        </div>
 </body>
 
 </html>
