adding hamburger menu icon

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li>Products</li>
                     <li>Support</li>
                 </ul>
+                <img src="images/icon-hamburger.svg" alt="hamburger menu" class="md:hidden">
             </div>
             <div id="header-text" class="absolute top-1/2 left-1/2 text-white md:left-1/3 md:top-1/3">
                 <p
